--- a/fullstack/assignments/assignment3/foundItems.html
+++ b/fullstack/assignments/assignment3/foundItems.html
@@ -1,5 +1,5 @@
-<div ng-if="matchedItems.items.length == 0">
-  <div class="row" ng-repeat="item in found.foundItems">
+<div ng-if="matchedItems.items.length > 0">
+  <div class="row" ng-repeat="item in menu.foundItems">
   <div class="col-md-1">
     {{$index + 1}}
   </div>
@@ -9,10 +9,10 @@
 	<div>{{ item.description }}</div>
   </div>
   <div class="col-md-5">
-    <button ng-click="found.onRemove({index: $index})" class="btn btn-danger pull-right">Don't want this one!</button>
+    <button ng-click="menu.onRemove({index: $index})" class="btn btn-danger pull-right">Don't want this one!</button>
   </div>
 </div>
 </div>
 
-<div class="alert alert-danger" role="alert" ng-show="found.onEmpty">{{found.onEmpty}}</div>
+<div class="alert alert-danger" role="alert" ng-show="menu.onEmpty">{{menu.onEmpty}}</div>
 
