--- a/fullstack/assignments/assignment3/index.html
+++ b/fullstack/assignments/assignment3/index.html
@@ -5,8 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	</head>
 	<body>
 	   <div class="container" ng-controller="NarrowItDownController as menu">
@@ -14,10 +12,10 @@
 				<div class="input-group">
 				  <input type="text" class="form-control" placeholder="Search in menu" class="form-control" ng-model="menu.shortName" />
 				<span class="input-group-btn">
-					<button type="button" class="btn btn-primary" ng-click=""menu.matchedMenuItems(menu.shortName)">Narrow It Down For Me!</button>
+					<button type="button" class="btn btn-primary" ng-click="menu.matchedMenuItems(menu.shortName)">Narrow It Down For Me</button>
 				</span>
 				</div>
-				
+
 			<found-items found-items="menu.found" on-remove="menu.removeMenuItem(index)" on-empty="menu.message"></found-items>
 		</div>
 		<script src="../../scripts/angular.min.js"></script>
