--- a/fullstack/assignments/index.html
+++ b/fullstack/assignments/index.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
    </head>
   <body>
-    <div class="container">
-      <a href="./assignment1/index.html">Assignment 1</a><br/>
-      <a href="./assignment2/index.html">Assignment 2</a><br/>
-      <a href="./assignment3/index.html">Assignment 3</a><br/>
-      <a href="./assignment4/index.html">Assignment 4</a><br/>
-      <a href="./assignment5/index.html">Assignment 5</a><br/>
+    <div class="wrapper">
+      <div class="header">
+      </div>
+      <div class="container">
+        <a href="./assignment1/index.html">Assignment 1</a><br/>
+        <a href="./assignment2/index.html">Assignment 2</a><br/>
+        <a href="./assignment3/index.html">Assignment 3</a><br/>
+      </div>
+      <div class="footer">
+      </div>
     </div>
   </body>
 </html>
