--- a/fullstack/assignments/Projects/Project01/index.html
+++ b/fullstack/assignments/Projects/Project01/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charser="utf-8">
     <title>Lunch Order</title>
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <script src="../../assets/angular.min.js"></script>
+    <script src="../../assets/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/styles/styles.css">
    </head>
   <body>
     <div class="container">
