--- a/fullstack/assignments/index.html
+++ b/fullstack/assignments/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charser="utf-8">
     <title>Lunch Order</title>
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <script src="assets/angular.min.js"></script>
+    <script src="assets/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
    </head>
   <body>
-    <div class="container">
-      <a href="./assignment1/index.html">Assignment 1</a><br/>
-      <a href="./assignment2/index.html">Assignment 2</a><br/>
-      <a href="./assignment3/index.html">Assignment 3</a><br/>
-      <a href="./assignment4/index.html">Assignment 4</a><br/>
-      <a href="./assignment5/index.html">Assignment 5</a><br/>
+    <div class="wrapper">
+      <div class="header"></div>
+      <div class="container">
+        <a href="./Projects/Project01/index.html">Assignment 1</a><br/>
+        <a href="./Projects//assignment2/index.html">Assignment 2</a><br/>
+        <a href="./Projects//assignment3/index.html">Assignment 3</a><br/>
+      </div>
+      <div class="footer"></div>
     </div>
-  </body>
+    </body>
 </html>
