--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charser="utf-8">
     <title>Lunch Order</title>
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <script src="assets/angular.min.js"></script>
+    <script src="assets/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
    </head>
   <body>
-    <div class="container">
-      <a href="../../assignment1/index.html">Assignment 1</a><br/>
-      <a href="../../assignment2/index.html">Assignment 2</a><br/>
-      <a href="../../assignment3/index.html">Assignment 3</a><br/>
+    <div class="wrapper">
+      <div class="header"></div>
+      <div class="container">
+        <a href="./Projects/Project01/index.html">Project 01</a><br/>
+        <a href="./Projects/Project02/index.html">Project 02</a><br/>
+        <a href="./Projects/Project03/index.html">Project 03</a><br/>
+      </div>
+      <div class="footer"></div>
     </div>
-  </body>
+    </body>
 </html>
-
