--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -439,16 +439,19 @@
           -->
           <!--form test-->
           <form action="https://formspree.io/f/xbjwbbar" method="POST">
-            <label>
-              Your email:
-              <input type="email" name="email">
-            </label>
-            <label>
-              Your message:
-              <textarea name="message"></textarea>
-            </label>
+            <fieldset>
+              <label for="full-name">Full Name</label>
+              <input type="text" name="name" id="full-name" placeholder="First and Last" required="required" >
+              <label for="email-address">Email Address</label>
+              <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="required">
+              <label for="telephone">Telephone Number (Optional)</label>
+              <input type="telephone" name="telephone" id="telephone" placeholder="+555 555-5555">
+              <label for="message">Message</label>
+              <textarea rows="6" name="message" id="message" placeholder="Please enter a message" required="required"></textarea>
+              <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission">
+            </fieldset>
             <!-- your other form fields go here -->
-            <button type="submit">Send</button>
+            <button type="submit">Send Message</button>
           </form>
         </div>
       </div>
