--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -438,6 +438,42 @@
           </form>
           -->
           <!--c form test-->
+          <form action="https://formspree.io/f/xbjwbbar" method="POST" novalidate="novalidate">
+            <fieldset>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="full-name">Full Name</label>
+                  <input class="form-control" id="name" type="text" name="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input class="form-control" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <label for="phone">Telephone Number (Optional)</label>
+                  <input class="form-control" id="phone" type="tel" placeholder="+555 555-5555" data-validation-required-message="Please enter your phone number.">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="message">Message</label>
+                  <textarea class="form-control" rows="6" name="message" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+            </fieldset>
+              <div class="clearfix"></div>
+              <div class="col-lg-12 text-center">
+                <div id="success"></div>
+                <input type="hidden" name="_subject" id="email-subject" value="Send Message">
+              </div>
+            </div>
+          </form>
+<!--
           <form action="https://formspree.io/f/xbjwbbar" method="POST">
             <fieldset>
               <label for="full-name">Full Name</label>
@@ -450,9 +486,9 @@
               <textarea rows="6" name="message" id="message" placeholder="Please enter a message" required="required"></textarea>
               <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission">
             </fieldset>
-            <!-- your other form fields go here -->
             <button type="submit">Send Message</button>
           </form>
+          -->
         </div>
       </div>
     </div>
