--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -467,7 +467,7 @@
               </div>
             </fieldset>
               <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
+              <div class="col-md-12 text-center">
                 <div id="success"></div>
                 <input type="hidden" name="_subject" id="email-subject" value="Send Message">
               </div>
