--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,9 +55,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
+        <div class="intro-lead-in">Welcome To My Place!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#projects">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#projects">Take a Look</a>
       </div>
     </div>
   </header>
@@ -397,7 +397,7 @@
 
   <!-- Contact -->
   <section id="contact">
-    <div class="container">
+    <div class="container contact">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
@@ -438,39 +438,41 @@
           </form>
           -->
           <!--c form test-->
-          <form action="https://formspree.io/f/xbjwbbar" method="POST" novalidate="novalidate">
+          <form action="https://formspree.io/f/xbjwbbar" method="POST">
             <fieldset>
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="full-name">Full Name</label>
-                  <input class="form-control" id="name" type="text" name="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                  <label for="full-name">Full name</label>
+                  <input class="form-control" id="name" type="text" name="name" placeholder="e.g. John Smith" required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
                   <label for="email">Email</label>
-                  <input class="form-control" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                  <input class="form-control" id="email" type="email" placeholder="e.g. email@example.com" required="required" data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <label for="phone">Telephone Number (Optional)</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="+555 555-5555" data-validation-required-message="Please enter your phone number.">
+                  <label for="phone">Telephone number (Optional)</label>
+                  <input class="form-control" id="phone" type="tel" placeholder="e.g. +555 5555555" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="message">Message</label>
-                  <textarea class="form-control" rows="6" name="message" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea class="form-control" rows="8" name="message" id="message" placeholder="Write me a message" required="required" data-validation-required-message="Please enter a message."></textarea>
                   <p class="help-block text-danger"></p>
+                  <input type="hidden" name="_subject" id="email-subject" value="Message from the website">
+                </div>
+                <div class="text-right text-xs-center">
+                  <div id="success"></div>
+                  <button class="btn btn-primary" text-uppercase type="submit">Send message</button>
                 </div>
               </div>
             </fieldset>
               <div class="clearfix"></div>
-              <div class="col-md-12 text-center">
-                <div id="success"></div>
-                <input type="hidden" name="_subject" id="email-subject" value="Send Message">
-              </div>
+              
             </div>
           </form>
 <!--
